<resources>
    <string name="app_name">Home of Modern Sciences School</string>
    <string name="powered_by">Powered By Coder Company</string>

    <!-- onboardstringd buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_start">Lets Get Started</string>
    <!-- onboardstringd titles -->

    <string name="titlss">Home of Modern Sciences School</string>
    <!-- neaviigation-->
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="library">Library</string>
    <string name="student">Gateway</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="activity">Activities</string>
    <string name="knowas">Know As</string>
    <string name="contactus">Contact Us</string>
    <string name="onlineregister">Register</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_news">NewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Hmss.edu">Hmss.edu</string>
    <string name="Hmss.edu2">hmss.edu</string>


    <string name="txtCredits"><a href="google.com">Google</a></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="certi">The Home of Modern Sciences Schools were established according to the decision of the Ministry of Higher Education for the year 2020 and have been formally accredited according to international standards and specifications
</string>
    <string name="certfication">Certfication</string>
    <string name="_967776779292">+967776779292</string>
    <string name="number">+01 423 692 - + 433 592</string>
    <string name="telegram_me_hmss_edu">hmss_edu</string>
    <string name="info_hmss_edu_com">info@hmss-edu.com</string>
    <string name="sanaa_hadda_st_near_germany_embassy">Sanaa,Hadda St. Near Germany Embassy</string>
    <string name="last_news">Last News</string>
    <string name="view_all">View All</string>
    <string name="announcements">Announcements</string>

    <string-array name="arraylist">
        <item>Choose Grade</item>
        <item>K.G1</item>
        <item>K.G2</item>
        <item>Grade1</item>
        <item>Grade2</item>
        <item>Grade3</item>
        <item>Grade4</item>
        <item>Grade5</item>
        <item>Grade6</item>
        <item>Grade7</item>
        <item>Grade8</item>
        <item>Grade9</item>
    </string-array>
</resources>

